// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ ciLygA"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ dlbSVZ"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ dYqQHE"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as outline 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ bxlHKV"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as plain 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ hTzPEr"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render as transparent 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ kHLfwz"
      color="primary"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render contrast text if not primary 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ kUfnao"
      color="danger"
      type="button"
    />
  </div>
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      disabled=""
      type="button"
    >
      Click
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render white text if primary 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      type="button"
    />
  </div>
</div>
`;
